Bug: PRD Reviewer: Lynn Comment: upgraded the action bar icons and jsp files to allow high resolution images to better display on mobile screens (that need higher res images)

--- a/trunk/ssf/web/docroot/css/ss_mobile_common.css
+++ b/trunk/ssf/web/docroot/css/ss_mobile_common.css
@@ -342,3 +342,9 @@ td .sectionHeading {
   font-weight: bold;
 }
 
+.actionbar-img  {
+	width: 25px;
+	height: 25px;
+	}	
+
+
